# polars_ta_extension

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: basic.ipynb  bench.ipynb  nasdaq_screener.csv
python/polars_ta/: __init__.py
python/polars_talib/: __init__.py  utils.py
src/: cycle.rs  expressions.rs  lib.rs  math.rs  momentum.rs  overlap.rs  pattern.rs  statistic.rs  transform.rs  utils.rs  volatility.rs  volume.rs
talib/: Cargo.toml  README.md
talib-sys/: Cargo.toml  README.md  build.rs  wrapper.h
talib-sys/dependencies/tmp/ta-lib/: CHANGELOG.TXT  ta_func_api.xml  ta_func_list.txt  ta_lib.lib
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/: lib_proj.dsw
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/gen_code/: gen_code.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/ta_abstract/: ta_abstract.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/ta_common/: ta_common.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/ta_func/: ta_func.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/ta_libc/: ta_libc.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/msvc/lib_proj/ta_regtest/: ta_regtest.dsp
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/: ta_lib.sln
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/gen_code/: gen_code.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/ta_abstract/: ta_abstract.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/ta_common/: ta_common.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/ta_func/: ta_func.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/ta_libc/: ta_libc.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/vs2005/lib_proj/ta_regtest/: ta_regtest.vcproj
talib-sys/dependencies/tmp/ta-lib/c/ide/xcode/TALib/English.lproj/: InfoPlist.strings
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/cygwin-g++/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/freebsd-g++/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/linux-g++/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/win32-borland/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/win32-msvc/: tmake.conf  win32app.dsp  win32dll.dsp  win32lib.dsp
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/win32-symantec/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/make/gen_make/template/win32-watcom/: tmake.conf
talib-sys/dependencies/tmp/ta-lib/c/src/ta_abstract/templates/: Makefile.am.template
talib-sys/dependencies/tmp/ta-lib/dotnet/: README.TXT
talib-sys/dependencies/tmp/ta-lib/dotnet/src/: TA-Lib.sln
talib-sys/dependencies/tmp/ta-lib/dotnet/src/Core/: TA-Lib-Core.h  TA-Lib-Core.vcproj
talib-sys/dependencies/tmp/ta-lib/excel/: README.TXT  example.xls  ta-lib-reverse.xll  ta-lib.xll
talib-sys/dependencies/tmp/ta-lib/excel/src/: ReadMe.txt  ta-lib.sln  ta-lib.vcproj
talib-sys/dependencies/tmp/ta-lib/excel/src/Release Reverse/: BuildLog.htm
talib-sys/dependencies/tmp/ta-lib/excel/src/test/: test_LINEARREG.xls  test_MAMA.xls  test_T3.xls
talib-sys/dependencies/tmp/ta-lib/excel/src/xlw/: ERR_Macros.h  XlfAbstractCmdDesc.cpp  XlfAbstractCmdDesc.h  XlfAbstractCmdDesc.inl  XlfArgDesc.cpp  XlfArgDesc.h  XlfArgDescList.cpp  XlfArgDescList.h  XlfCmdDesc.cpp  XlfCmdDesc.h  XlfExcel.cpp  XlfExcel.h  XlfExcel.inl  XlfException.cpp  XlfException.h  XlfException.inl  XlfFuncDesc.cpp  XlfFuncDesc.h  XlfOper.cpp  XlfOper.h  XlfOper.inl  XlfRef.cpp  XlfRef.h  XlfRef.inl  config.mgw.h  config.msvc.h  macros.h  port.h  pragmas.h  xlcall32.h  xlw.h
talib-sys/dependencies/tmp/ta-lib/excel/src/xlw_for_talib/: Win32StreamBuf.cpp  Win32StreamBuf.h  Win32StreamBuf.inl  xlw_for_talib.cpp  xlw_for_talib.dep  xlw_for_talib.dsp  xlw_for_talib.mak  xlw_for_talib.vcproj  xlw_for_talib_reverse.mak
talib-sys/dependencies/tmp/ta-lib/excel/temp/reverse/: BuildLog.htm  mt.dep
talib-sys/dependencies/tmp/ta-lib/java/: build.xml
talib-sys/dependencies/tmp/ta-lib/swig/: README.TXT
talib-sys/dependencies/tmp/ta-lib/swig/ide/msvc/perl/: perl.dep
talib-sys/dependencies/tmp/ta-lib/swig/ide/vs2005/perl/: perl.sln  perl.vcproj
talib-sys/dependencies/tmp/ta-lib/swig/make/python/linux/g++/: Makefile
talib-sys/dependencies/tmp/ta-lib/swig/src/interface/: perl.pm  ta_func.swg  ta_libc.python.swg
talib-sys/dependencies/tmp/ta-lib/swig/src/tools/test_perl/: ta_abstract.t  ta_common.t  ta_defs.t  ta_func.t
talib-sys/dependencies/tmp/ta-lib/swig/temp/perl/wrap/: TA.pm
talib-sys/examples/: atr.rs  rsi.rs  sma.rs
talib-sys/src/: bindings.rs  lib.rs
talib/examples/: rsi.rs  sar.rs
talib/src/: common.rs  cycle.rs  lib.rs  math.rs  momentum.rs  overlap.rs  pattern.rs  statistic.rs  transform.rs  utils.rs  volatility.rs  volume.rs
tests/: conftest.py  test_bench.py  test_nan.py  test_ta.py
utils/: build_talib.bash
