[package]
name = "polars_talib"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_polars_talib"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = { version = "0.10.0", features = ["derive"] }
polars = {version = "0.36.2", features = ["dtype-struct"]}
# "performant", "lazy", "dtype-array"
serde = { version = "*", features = ["derive"] }
talib-sys = { path = "talib-sys"}
talib = { path = "talib"}

[target.'cfg(any(not(target_os = "linux"), use_mimalloc))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
 
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
