[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "polars_talib"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
    {name = "yvictor", email = "yvictor3141@gmail.com"}
]
dependencies = [
    "polars >= 0.20",
] 
description = "Polars extension for Ta-Lib: Support Ta-Lib functions in Polars expressions"
readme = "README.md"
keywords = ["polars-extension", "talib", "technical-analysis", "TA-Lib", "polars", "rust", "polars-expr"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "polars_talib._polars_talib"

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.1",
    "maturin[patchelf]",
    "polars",
    "numpy",
    "memray",
    "hypothesis",
    "pytest-memray",
    "pytest-benchmark",
    "ta-lib",
]

[tool.ruff]
line-length = 100
fix = true
src = ["python"]